Fix extra spacing in project nav

--- a/packages/desktop-gui/src/app/nav.scss
+++ b/packages/desktop-gui/src/app/nav.scss
@@ -47,7 +47,7 @@
         font-size: 13px;
         color: #444;
         padding: 1px 20px 0 20px;
-        line-height: 40px;
+        line-height: 42px;
       }
 
       > a  {
